--- a/BrokenApp/app/src/main/AndroidManifest.xml
+++ b/BrokenApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.BrokenApp"
         tools:targetApi="31">
         <activity
+            android:name=".HIstory"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Notification"
             android:exported="false">
             <meta-data
