--- a/RestfulAPI/app/build.gradle
+++ b/RestfulAPI/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.brokenapp'
+    namespace 'com.example.restfulapi'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.brokenapp"
+        applicationId "com.example.restfulapi"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -27,7 +27,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -46,7 +45,7 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
-    
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
