--- a/Bebas/app/src/main/AndroidManifest.xml
+++ b/Bebas/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.Bebas"
         tools:targetApi="31">
         <activity
-            android:name=".AccountActivate"
+            android:name=".features.signup.AccountActivate"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".features.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
