fixed user validation

--- a/BrokenApp/app/src/main/AndroidManifest.xml
+++ b/BrokenApp/app/src/main/AndroidManifest.xml
@@ -13,21 +13,21 @@
         android:theme="@style/Theme.BrokenApp"
         tools:targetApi="31">
         <activity
-            android:name=".HIstory"
+            android:name=".features.history.HIstory"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Notification"
+            android:name=".features.notification.Notification"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Home"
+            android:name=".features.home.Home"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -41,14 +41,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".AccountActivate"
+            android:name=".features.signup.AccountActivate"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".features.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
